--- a/javaee-synthesize/pom.xml
+++ b/javaee-synthesize/pom.xml
@@ -7,8 +7,55 @@
     <version>1.0-SNAPSHOT</version>
     <name>javaee-synthesize</name>
 
+    <!-- 问题反馈信息 -->
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/huguangju/javaee-scaffold/issues</url>
+    </issueManagement>
+
+    <!-- 开发人员信息 -->
+    <developers>
+        <developer>
+            <id>huguangju</id>
+            <email>huguangju1990@163.com</email>
+            <name>huguangju</name>
+            <organization>jediego</organization>
+            <roles>
+                <role>softwareengineer</role>
+            </roles>
+            <timezone>8</timezone>
+        </developer>
+    </developers>
+
+    <!--许可证 -->
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+        </license>
+    </licenses>
+
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jdk.version>1.7</jdk.version>
+        <mvnsite.basedir>${project.basedir}/src/main/resources/mvnsite</mvnsite.basedir>
+        <site.basedir>${project.basedir}</site.basedir>
+
         <spring.version>4.1.1.RELEASE</spring.version>
+
+        <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>2.13</maven-surefire-plugin.version>
+        <maven-site-plugin.version>3.2</maven-site-plugin.version>
+        <maven-checkstyle-plugin.version>2.9.1</maven-checkstyle-plugin.version>
+        <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
+        <findbugs-maven-plugin.version>2.5.2</findbugs-maven-plugin.version>
+        <maven-pmd-plugin.version>2.7.1</maven-pmd-plugin.version>
+        <cobertura-maven-plugin.version>2.5.2</cobertura-maven-plugin.version>
+        <taglist-maven-plugin.version>2.4</taglist-maven-plugin.version>
+        <maven-javadoc-plugin.version>2.7</maven-javadoc-plugin.version>
+        <maven-project-info-reports-plugin.version>2.4</maven-project-info-reports-plugin.version>
+        <sphinx-maven-plugin.version>1.0.3</sphinx-maven-plugin.version>
+
     </properties>
 
     <dependencies>
@@ -66,22 +113,152 @@
 
     <build>
         <finalName>javaee-synthesize</finalName>
+
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
+
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <includes>
-						<include>**/*Test.java</include>
+                        <include>**/*Test.java</include>
                         <include>**/*Tests.java</include>
                     </includes>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>${maven-site-plugin.version}</version>
+                <configuration>
+                    <locales>zh_CN</locales>
+                    <outputDirectory>${site.basedir}/target/site/${project.artifactId}</outputDirectory>
+                    <outputEncoding>UTF-8</outputEncoding>
+                    <inputEncoding>UTF-8</inputEncoding>
+                    <reportPlugins>
+                        <!-- 单元测试 -->
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>2.13</version>
+                            <configuration>
+                                <argLine>-Xmx128M</argLine>
+                                <includes>
+                                    <include>**/*Test*.java</include>
+                                    <include>**/*Test.java</include>
+                                    <include>**/*IT.java</include>
+                                    <include>**/*TestCase.java</include>
+                                </includes>
+                            </configuration>
+                        </plugin>
+
+                        <!-- checkstyle 代码规范检查 -->
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-checkstyle-plugin</artifactId>
+                            <version>${maven-checkstyle-plugin.version}</version>
+                            <configuration>
+                                <configLocation>${mvnsite.basedir}/checkstyle_checks.xml</configLocation>
+                                <suppressionsLocation>${mvnsite.basedir}/checkstyle-suppressions.xml</suppressionsLocation>
+                                <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-jxr-plugin</artifactId>
+                            <version>${maven-jxr-plugin.version}</version>
+                            <configuration>
+                                <aggregate>true</aggregate>
+                            </configuration>
+                        </plugin>
+
+                        <!-- findbugs 静态分析工具 -->
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>findbugs-maven-plugin</artifactId>
+                            <version>${findbugs-maven-plugin.version}</version>
+                            <configuration>
+                                <xmlOutput>true</xmlOutput>
+                            </configuration>
+                        </plugin>
+
+                        <!-- pmd Java程序代码检查工具 -->
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-pmd-plugin</artifactId>
+                            <version>${maven-pmd-plugin.version}</version>
+                        </plugin>
+
+                        <!-- cobertura 代码覆盖率工具 -->
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>cobertura-maven-plugin</artifactId>
+                            <version>${cobertura-maven-plugin.version}</version>
+                            <configuration>
+                                <check>
+                                    <branchRate>85</branchRate>
+                                    <lineRate>85</lineRate>
+                                    <haltOnFailure>true</haltOnFailure>
+                                    <totalBranchRate>85</totalBranchRate>
+                                    <totalLineRate>85</totalLineRate>
+                                    <packageLineRate>85</packageLineRate>
+                                    <packageBranchRate>85</packageBranchRate>
+                                    <regexes>
+                                        <regex>
+                                            <pattern>todo.*</pattern>
+                                            <branchRate>90</branchRate>
+                                            <lineRate>80</lineRate>
+                                        </regex>
+                                    </regexes>
+                                </check>
+                                <instrumentation>
+                                    <ignores>
+                                        <ignore>todo.*</ignore>
+                                    </ignores>
+                                    <excludes>
+                                        <exclude>todo//**/*.class</exclude>
+                                    </excludes>
+                                </instrumentation>
+                            </configuration>
+                        </plugin>
+
+                        <!-- taglist报表 生成标注上@todo或TODO的项目的列表 -->
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>taglist-maven-plugin</artifactId>
+                            <version>${taglist-maven-plugin.version}</version>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <version>${maven-javadoc-plugin.version}</version>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>${maven-project-info-reports-plugin.version}</version>
+                        </plugin>
+
+                         <plugin>
+                             <groupId>org.tomdz.maven</groupId>
+                             <artifactId>sphinx-maven-plugin</artifactId>
+                             <version>${sphinx-maven-plugin.version}</version>
+                         </plugin>
+                    </reportPlugins>
+                </configuration>
+
             </plugin>
         </plugins>
     </build>
